--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,20 @@ dependencies:
   reflectable: ^4.0.4
   sqflite: ^2.2.4+1
 
+
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.10
   firebase_core: ^2.7.1
+  flutter_native_splash: ^2.2.18
+  flutter_launcher_icons: ^0.12.0
+
+
+flutter_native_splash:
+    color: "0xff08182A"
+    image: "assets/images/icons/home.png"
+    android: true
+    ios: true
+
 
 dev_dependencies:
   flutter_test:
@@ -46,3 +57,4 @@ flutter:
     - assets/images/icons/bg-blur-3.png
     - assets/images/icons/alexa.png
     - assets/images/icons/google.png
+    - assets/images/icons/avatar.png
