--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.penseapp.flutterfire_smarthome">
    <application
-        android:label="flutterfire_smarthome"
+        android:label="Smart Home"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
